# reachability_tools

./: LICENSE  README.md
reachability_description/: CMakeLists.txt  package.xml
reachability_description/apps/: generate_robot_reach_ee_poses.cpp  hand_to_user.cpp  robot_to_task.cpp  robot_to_task_2.cpp  simulate_robot_base_motion.cpp  test_cube_discretization.cpp  test_tesseract_discretization.cpp
reachability_description/config/curiosity/: reachability_params.yaml
reachability_description/config/fetch/: reachability_params.yaml
reachability_description/config/panda/: reachability_params.yaml
reachability_description/config/panda_husky/: reachability_params.yaml
reachability_description/config/tiago/: reachability_params.yaml
reachability_description/config/yumi/: reachability_params.yaml
reachability_description/include/reachability_description/: quaternion_discretization.h  reach_data.h  reach_graph.h  reach_graph_aggregated.h  reach_serialization.h  reach_utilities.h  reachability_description.h
reachability_description/launch/: curiosity_generate_reachability.launch.py  curiosity_load_reachability.launch.py  fetch_estimate_reachability_limits.launch.py  fetch_generate_reachability.launch.py  fetch_human_demo.launch.py  fetch_load_reachability.launch.py  fetch_task_demo.launch.py  fetch_test.launch.py  panda_estimate_reachability_limits.launch.py  panda_generate_reachability.launch.py  panda_human_demo.launch.py  panda_load_reachability.launch.py  panda_test.launch.py  tiago_estimate_reachability_limits.launch.py  tiago_generate_reachability.launch.py  tiago_load_reachability.launch.py  tiago_reachability_generation.launch.py  tiago_task_demo.launch.py  tiago_teleop_arm.launch.py  tiago_test.launch.py  yumi_load_reachability.launch.py
reachability_description/launch/curiosity/: curiosity_estimate_reachability_limits.launch.py  curiosity_task_demo.launch.py  curiosity_teleop_arm.launch.py
reachability_description/launch/fetch/: fetch_human_demo.launch.py  fetch_load_reachability.launch.py  fetch_task_demo.launch.py  fetch_teleop_arm.launch.py
reachability_description/launch/panda/: panda_estimate_reachability_limits.launch.py  panda_generate_reachability.launch.py  panda_load_reachability.launch.py
reachability_description/launch/panda_husky/: panda_husky_estimate_reachability_limits.launch.py  panda_husky_generate_reachability.launch.py  panda_husky_load_reachability.launch.py  panda_husky_reach_poses.launch.py  panda_husky_task_demo.launch.py  panda_husky_teleop_arm.launch.py
reachability_description/launch/tiago/: tiago_estimate_reachability_limits.launch.py  tiago_generate_reachability.launch.py  tiago_load_reachability.launch.py  tiago_task_demo.launch.py  tiago_teleop_arm.launch.py
reachability_description/launch/yumi/: yumi_estimate_reachability_limits.launch.py  yumi_generate_reachability.launch.py
reachability_description/scripts/: visualize_discretize_square.py
reachability_description/src/: estimate_reachability_limits_node.cpp  generate_reachability_node.cpp  load_reachability_node.cpp  quaternion_discretization.cpp  reach_data.cpp  reach_graph.cpp  reach_graph_aggregated.cpp  reach_serialization.cpp  reach_utilities.cpp  reachability_description.cpp  reachability_description_parameters.yaml  reachability_generation_node.cpp
reachability_description/tools/: estimate_reachability_limits_node.cpp  generate_reachability_node.cpp
reachability_msgs/: CMakeLists.txt  package.xml
reachability_msgs/msg/: ChainInfo.msg  PlaceRobotSolution.msg  ReachData.msg  ReachGraph.msg  ReachParams.msg  ReachSample.msg
reachability_msgs/srv/: GenerateReachPoses.srv  GetHandToUser.srv  MoveRobotToTask.srv
reachability_plugins/reach_plugin_reuleaux/: CMakeLists.txt  package.xml  plugins.xml
reachability_plugins/reach_plugin_reuleaux/apps/: test_cube_discretization.cpp  test_tesseract_discretization.cpp
reachability_plugins/reach_plugin_reuleaux/include/reach_plugin_reuleaux/: reach_graph_reuleaux.h
reachability_plugins/reach_plugin_reuleaux/src/: quaternion_discretization.cpp  reach_graph_reuleaux.cpp
robot_unit/: CMakeLists.txt  package.xml
robot_unit/include/robot_unit/: fast_allowed_collision_matrix.h  fast_base_collision_object.h  fast_collision_detector.h  fast_common.h  fast_helpers.h  fast_robot_collision_object.h  robot_entity.h  treefksolverpos_recursive.hpp
robot_unit/src/: fast_allowed_collision_matrix.cpp  fast_base_collision_object.cpp  fast_collision_detector.cpp  fast_collision_detector_test_node.cpp  fast_common.cpp  fast_helpers.cpp  fast_robot_collision_object.cpp  robot_entity.cpp  treefksolverpos_recursive.cpp
