<?xml version="1.0"?>
<package format="3">
  <name>reachability_description</name> 
  <version>1.0.0</version>
  <description>
    Reachability description
  </description>
  <author>Ana C. Huaman Q.</author>
  <maintainer email="ana@traclabs.com">Ana C. Huaman Q.</maintainer>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_eigen_kdl</depend>
  <depend>tf2_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>trac_ik_lib</depend>
  <depend>urdf</depend>
  <depend>srdfdom</depend>
  <depend>pkg-config</depend>
  <depend>robot_unit</depend>
  <depend>pcl_conversions</depend>
  <depend>reachability_msgs</depend>
  <depend>generate_parameter_library</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
