<?xml version="1.0"?>
<package format="3">
  <name>reachability_msgs</name> 
  <version>1.0.0</version>
  <description>
    Reachability messages to store information offline
  </description>
  <author>Ana C. Huaman Q.</author>
  <maintainer email="ana@traclabs.com">Ana C. Huaman Q.</maintainer>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
